FIX overflow for code, pre elements

--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -72,6 +72,7 @@ p, ul, ol, dl, table, pre, blockquote {
 
 pre, code {
   font-family: $family-monospace;
+  overflow-x: auto;
 }
 
 pre {
